tests/cases/smoke/invalid/class_setup_params.ty
class Fish {
    setup(name: str) {
        print(name)
    }
}
